--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-*{
+*, *::before, *::after{
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
     scroll-behavior: smooth;
-    font-family: "Montserrat", serif;
+    font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    box-sizing: border-box;
 }
 
-body{
-    height: 100%;
-    max-width: 100vh;
-    background: url('../assets/images/wallpaper/FinalPatternDark.svg');
+html{
     overflow: hidden;
 }
 
-nav{
+body{
+    max-height: 100vh;
+    max-width: 100vw;
+    background: url('../assets/images/wallpaper/FinalPatternDark.svg');
+    overflow-x: hidden;
+}
+
+.navbar{
     position: fixed;
     bottom: 0;
     left: 0;
@@ -29,6 +34,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    /* grid-area: nav; */
 }
 
 nav ul{
@@ -90,6 +96,12 @@ nav ul{
     -o-border-radius: 10px;
 }
 
+.details-frame button:hover{
+    cursor: pointer;
+    filter: brightness(1.2);
+    -webkit-filter: brightness(1.2);
+}
+
 .about-me{
     background: linear-gradient(#00000055, #000, #000, #000,#000);
     color: #fff;
@@ -105,6 +117,7 @@ nav ul{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-bottom: 80px;
 }
 
 .about-me-title{
