--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
     max-height: 100vh;
     max-width: 100vw;
     background: url('../assets/images/wallpaper/FinalPatternDark.svg');
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .navbar{
@@ -168,17 +168,22 @@ nav ul{
 /* .footer { grid-area: footer; } */
 
 .portfolio {
+    position: relative;
     width: 100%;
     height: 100vh;
-    padding-bottom: 80px;
+    /* padding-bottom: 80px; */
     background: linear-gradient(#00000055, #000, #000, #000,#000);
     color: #fff;
 
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* display: grid;
     grid:
     "header" 2fr
-    " body " 8fr;
-    gap: 8px;
+    " body " 8fr
+    / 1fr; */
+    /* gap: 8px; */
 }
 
 .header { grid-area: header; }
@@ -321,10 +326,17 @@ nav ul{
         scroll-snap-align: center;
     }
 }
+.portfolio .header{
+    position: absolute;
+    top: 0;
+    z-index: 10;
+}
 
 .carousel{
     width: 100vw;
-    /* height: 80vh; */
+    margin-bottom: 80px;
+    padding-bottom: 80px;
+    height: 100%;
 }
 
 .carousel_viewport{
